--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -232,3 +232,15 @@
     transform: translateX(300%);
   }
 }
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
